Renames three.js to triangle.js

--- a/Three/index.html
+++ b/Three/index.html
@@ -10,6 +10,6 @@
     </style>
 </head>
 <body>
-    <script type="module" src="three.js"></script>
+    <script type="module" src="triangle.js"></script>
 </body>
 </html>
